sas-core/main/default/objects/IRR_LoungeAccessQRCode__c/IRR_LoungeAccessQRCode__c.object-meta.xml
<CustomObject>
    <label>Lounge Access QR Code</label>
    <nameField>
        <displayFormat>QR-{0000000000}</displayFormat>
        <label>Lounge Access QR Code  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lounge Access QR Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>