sas-core/main/default/objects/IRR_LoungeAccessQRCode__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>