sas-core/main/default/objects/IRR_LoungeAccessQRCode__c/fields/expiryDate__c.field-meta.xml
<CustomField>
    <fullName>expiryDate__c</fullName>
    <label>expiry Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>