sas-core/main/default/objects/IRR_LoungeAccessQRCode__c/fields/ReceiverEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ReceiverEmailAddress__c</fullName>
    <label>Receiver Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>