sas-core/main/default/objects/IRR_LoungeAccessQRCode__c/fields/voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>voucher_Code__c</fullName>
    <label>voucher Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>