sas-core/main/default/objects/IRR_LoungeAccessQRCode__c/fields/voucherCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>voucherCaseNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Lounge Access QR Codes</relationshipLabel>
    <relationshipName>Lounge_Access_QR_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>