sas-core/main/default/objects/IRR_LoungeAccessQRCode__c/fields/voucherSubmitter__c.field-meta.xml
<CustomField>
    <fullName>voucherSubmitter__c</fullName>
    <label>Voucher Submitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>